correctly handle antlr4.cmd on windows

--- a/recipes/latex2sympy/meta.yaml
+++ b/recipes/latex2sympy/meta.yaml
@@ -17,10 +17,11 @@ source:
 build:
   number: 0
   script:
-    - cp {{ RECIPE_DIR }}/MANIFEST.in {{ SRC_DIR }}
-    - antlr4 latex2sympy/PS.g4 -o latex2sympy/gen
+    - cd "{{ RECIPE_DIR }}"
+    - copy MANIFEST.in "{{ SRC_DIR }}"  # [win]
+    - cp MANIFEST.in "{{ SRC_DIR }}"  # [unix]
+    - cd "{{ SRC_DIR }}"
     - python setup.py install --single-version-externally-managed --record record.txt
-  skip: True  # [win]
 
 requirements:
   build:
