added extra maintainers

--- a/recipes/r-skat/meta.yaml
+++ b/recipes/r-skat/meta.yaml
@@ -52,6 +52,10 @@ about:
   
 extra:
   recipe-maintainers:
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
     - bsennblad
 
 
