--- a/recipes/mdbenchmark/meta.yaml
+++ b/recipes/mdbenchmark/meta.yaml
@@ -14,7 +14,9 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
-  skip: true  # [win]
+  skip: true  # [win and osx]
+  entry_points:
+    - mdbenchmark = mdbenchmark.cli:cli
 
 requirements:
   build:
@@ -34,11 +36,13 @@ requirements:
 test:
   imports:
     - mdbenchmark
+  commands:
+    - mdbenchmark
 
 about:
-  home: http://github.com/simplejson/simplejson
-  license: GPL
-  license_family: GPL3
+  home: https://github.com/bio-phys/MDBenchmark
+  license: GPL-3.0
+  license_family: GPL
   license_file: LICENSE
   summary: 'Benchmark GROMACS simulations'
 
