Adding maintainers, and fixing md5 checksum.

--- a/recipes/pyemojify/meta.yaml
+++ b/recipes/pyemojify/meta.yaml
@@ -9,7 +9,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  md5sum: {{ md5sum }}
+  md5: {{ md5sum }}
 
 build:
   number: 0
@@ -31,3 +31,7 @@ about:
   license_family: MIT
   license_file: LICENSE
   summary: 'Substitutes emoji aliases to emoji raw characters. Simple but sweet :smile:'
+
+extra:
+  recipe-maintainers:
+    - hellothisisMatt
