all recipe files now generated by conda_r_skeleton_helper run.sh

--- a/recipes/r-skat/meta.yaml
+++ b/recipes/r-skat/meta.yaml
@@ -16,14 +16,11 @@ source:
 
 build:
   number: 0
-  
-  skip: true  # [win]
-  
+  skip: true  # [win32]
+
   rpaths:
     - lib/R/lib/
     - lib/
-
-
 requirements:
   build:
     - r-base
@@ -43,13 +40,14 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=SKAT
-  license: GPL 3
+  license: GPL (>= 2)
   summary: Functions for kernel-regression-based association tests including Burden test, SKAT
     and SKAT-O. These methods aggregate individual SNP score statistics in a SNP set
     and efficiently compute SNP-set level p-values.
   license_family: GPL3
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
-  
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
+
 extra:
   recipe-maintainers:
     - johanneskoester
@@ -57,6 +55,3 @@ extra:
     - daler
     - jdblischak
     - bsennblad
-
-
-    
