Fix linting problems:
- Add license
- Fix license type
- Add tests
- Add maintainer
- Add build number

--- a/recipes/fann2/meta.yaml
+++ b/recipes/fann2/meta.yaml
@@ -12,12 +12,27 @@ source:
    # List any patch files here
    # - fix.patch
 
+build:
+  number: 1
 
 requirements:
   build:
     - cmake
 
+test:
+  commands:
+    - test -f $PREFIX/lib/libdoublefann.dylib
+    - test -f $PREFIX/lib/libfann.dylib
+    - test -f $PREFIX/lib/libfixedfann.dylib
+    - test -f $PREFIX/lib/libfloatfann.dylib
+
 about:
   home: https://github.com/libfann/fann
-  license: GNU Lesser General Public License v2 or later (LGPLv2+)
+  license_file: LICENSE.txt
+
+  license: LGPL-2+
   summary: 'Fast Artificial Neural Network (FANN) Library'
+
+extra:
+  recipe-maintainers:
+    - smithsp
