Fixed license file to be that in the source code

--- a/recipes/fann2/meta.yaml
+++ b/recipes/fann2/meta.yaml
@@ -27,7 +27,7 @@ test:
 
 about:
   home: https://github.com/libfann/fann
-  license_file: LICENSE.txt
+  license_file: COPYING.txt
 
   license: LGPL-2+
   summary: 'Fast Artificial Neural Network (FANN) Library'
