--- a/recipes/fann2/meta.yaml
+++ b/recipes/fann2/meta.yaml
@@ -13,6 +13,7 @@ source:
 
 build:
   number: 1
+  skip: True # [win]
 
 requirements:
   build:
@@ -20,10 +21,14 @@ requirements:
 
 test:
   commands:
-    - test -f $PREFIX/lib/libdoublefann.dylib
-    - test -f $PREFIX/lib/libfann.dylib
-    - test -f $PREFIX/lib/libfixedfann.dylib
-    - test -f $PREFIX/lib/libfloatfann.dylib
+    - test -f $PREFIX/lib/libdoublefann.dylib # [osx]
+    - test -f $PREFIX/lib/libfann.dylib # [osx]
+    - test -f $PREFIX/lib/libfixedfann.dylib # [osx]
+    - test -f $PREFIX/lib/libfloatfann.dylib # [osx]
+    - test -f $PREFIX/lib/libdoublefann.so # [unix]
+    - test -f $PREFIX/lib/libfann.so # [unix]
+    - test -f $PREFIX/lib/libfixedfann.so # [unix]
+    - test -f $PREFIX/lib/libfloatfann.so # [unix]
 
 about:
   home: https://github.com/libfann/fann
