Removing the build.sh, moving build into recipe and adding no arch

--- a/recipes/pyemojify/meta.yaml
+++ b/recipes/pyemojify/meta.yaml
@@ -12,13 +12,15 @@ source:
   md5: {{ md5sum }}
 
 build:
+  noarch: python
   number: 0
+  script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
+    - python
   run:
     - python
-    - pytest
 
 test:
   imports:
@@ -26,7 +28,7 @@ test:
 
 
 about:
-  home: https://github.com/lord63/pyemojifyl
+  home: https://github.com/lord63/pyemojify
   license: MIT
   license_family: MIT
   license_file: LICENSE
