--- a/recipes/databroker/meta.yaml
+++ b/recipes/databroker/meta.yaml
@@ -13,11 +13,12 @@ source:
 
 build:
   number: 0
+#  noarch: python
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
-    - python
+    - python >3
     - setuptools
   run:
     - attrs >=16.3.0
@@ -32,11 +33,10 @@ requirements:
     - numpy
     - pandas
     - pims
-    - python
+    - python >3
     - pytz
     - pyyaml
     - requests
-    - singledispatch  # [py27]
     - six
     - tifffile
     - tornado
