--- a/recipes/databroker/meta.yaml
+++ b/recipes/databroker/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "databroker" %}
-{% set version = "0.9.3" %}
+{% set version = "v0.9.3" %}
 {% set sha256 = "71f015e012e1f99ffcf247f43e3faa29980990eb6977a0f9fccd177b9c167928" %}
 
 package:
@@ -8,17 +8,16 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/NSLS-II/{{ name }}/archive/v{{ version }}.tar.gz
+  url: https://github.com/NSLS-II/{{ name }}/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
   number: 0
-#  noarch: python
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
-    - python >3
+    - python
     - setuptools
   run:
     - attrs >=16.3.0
@@ -33,7 +32,7 @@ requirements:
     - numpy
     - pandas
     - pims
-    - python >3
+    - python
     - pytz
     - pyyaml
     - requests
