Address comments in code review and fix OSX test

--- a/recipes/fann2/meta.yaml
+++ b/recipes/fann2/meta.yaml
@@ -5,14 +5,10 @@ package:
 source:
   fn: fann2-2.2.0.tar.gz
   url: https://github.com/libfann/fann/archive/2.2.0.tar.gz
-  md5:  e78dc740982c083154980348a749038c
   sha256: f31c92c1589996f97d855939b37293478ac03d24b4e1c08ff21e0bd093449c3c
-#  patches:
-   # List any patch files here
-   # - fix.patch
 
 build:
-  number: 1
+  number: 0
   skip: True  # [win]
 
 requirements:
@@ -25,10 +21,10 @@ test:
     - test -f $PREFIX/lib/libfann.dylib  # [osx]
     - test -f $PREFIX/lib/libfixedfann.dylib  # [osx]
     - test -f $PREFIX/lib/libfloatfann.dylib  # [osx]
-    - test -f $PREFIX/lib/libdoublefann.so  # [unix]
-    - test -f $PREFIX/lib/libfann.so  # [unix]
-    - test -f $PREFIX/lib/libfixedfann.so  # [unix]
-    - test -f $PREFIX/lib/libfloatfann.so  # [unix]
+    - test -f $PREFIX/lib/libdoublefann.so  # [linux]
+    - test -f $PREFIX/lib/libfann.so  # [linux]
+    - test -f $PREFIX/lib/libfixedfann.so  # [linux]
+    - test -f $PREFIX/lib/libfloatfann.so  # [linux]
 
 about:
   home: https://github.com/libfann/fann
