--- a/recipes/py-fann2/meta.yaml
+++ b/recipes/py-fann2/meta.yaml
@@ -32,3 +32,7 @@ about:
   home: https://github.com/FutureLinkCorporation/fann2
   license: LGPL2
   summary: 'Fast Artificial Neural Network Library (fann) python bindings.'
+
+extra:
+  recipe-maintainers:
+    - smithsp
