Clean up license per linter

--- a/recipes/fortranformat/meta.yaml
+++ b/recipes/fortranformat/meta.yaml
@@ -29,7 +29,7 @@ test:
 
 about:
   home: http://bitbucket.org/brendanarnold/py-fortranformat
-  license: MIT License
+  license: MIT
   license_family: MIT
   license_file: ''
   summary: Mimics Fortran textual IO in Python
