Remove the word "License" from recipe license

--- a/recipes/flask_swagger_ui/meta.yaml
+++ b/recipes/flask_swagger_ui/meta.yaml
@@ -31,7 +31,7 @@ test:
 
 about:
   home: https://github.com/sveint/flask-swagger-ui
-  license: MIT License
+  license: MIT
   summary: 'Swagger UI blueprint for Flask'
   license_family: MIT
 
