Switch to wheel install instead of setuptools build

--- a/recipes/fmpy/meta.yaml
+++ b/recipes/fmpy/meta.yaml
@@ -6,19 +6,13 @@ package:
   name: {{ name|lower }}
   version: {{ version }}
 
-source:
-  url: https://github.com/CATIA-Systems/FMPy/archive/v{{ version }}.tar.gz
-  fn: v{{ version }}.tar.gz
-  sha256: {{ sha256 }}
-
 build:
   number: 0
-  script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
   build:
     - python
-    - setuptools
+    - pip
   run:
     - lxml
     - numpy
@@ -28,11 +22,6 @@ requirements:
     - pywin32  # [win]
 
 test:
-  source_files:
-    - tests/*
-  requires:
-    - pytest
-    - dask
   imports:
     - fmpy
     - fmpy.cross_check
