Put license file into recipe dir

--- a/recipes/fmpy/meta.yaml
+++ b/recipes/fmpy/meta.yaml
@@ -34,7 +34,7 @@ about:
   home: https://github.com/CATIA-Systems/FMPy
   license: BSD-3-Clause
   license_family: BSD
-  license_file: LICENSE.txt
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   summary: 'Simulate Functional Mockup Units (FMUs) in Python'
 
 extra:
