--- a/recipes/py-fann2/meta.yaml
+++ b/recipes/py-fann2/meta.yaml
@@ -11,6 +11,7 @@ build:
   number: 0
   # noarch_python: True
   # preserve_egg_dir: True
+  script: 'python setup.py install --single-version-externally-managed --record=record.txt'
 
 requirements:
   build:
