--- a/recipes/fortranformat/meta.yaml
+++ b/recipes/fortranformat/meta.yaml
@@ -31,18 +31,13 @@ about:
   home: http://bitbucket.org/brendanarnold/py-fortranformat
   license: MIT
   license_family: MIT
-  license_file: ''
+  license_file: 'COPYING.txt'
   summary: Mimics Fortran textual IO in Python
-  description: "FORTRAN format interpreter for Python\n-------------------------------------    \n\nGenerates text from a Python list of variables or will read a line of text into Python variables according\
-    \  to the FORTRAN format statement passed.\n\nLicensed under the MIT license\n\nThe library is extensively unit-tested (but not yet extensively user-tested, `please report bugs <https://bitbucket.org/brendanarnold/py-fortranformat/issues>`_!)\
-    \ against the Intel FORTRAN compiler on a Linux platform. Differences between platforms/compilers are generally minor.\n\nThe following is a quistart, full docs are found at `the project page wiki <https://bitbucket.org/brendanarnold/py-fortranformat/wiki/Home>`_!.\n\
-    \nTo read Fortran records,:\n\n  >>> import fortranformat as ff\n  >>> header_line = ff.FortranRecordReader('(A15, A15, A15)')\n  >>> header_line.read('              x              y              z')\n\
-    \    ['              x', '              y', '              z']\n  >>> line = FortranRecordReader('(3F15.3)')\n  >>> line.read('          1.000          0.000          0.500')\n    [1.0, 0.0, 0.5]\n\
-    \  >>> line.read('          1.100          0.100          0.600')\n    [1.1, 0.1, 0.6]\n\nTo write Fortran records,:\n\n  >>> import fortranformat as ff\n  >>> header_line = ff.FortranRecordWriter('(A15,\
-    \ A15, A15)')\n  >>> header_line.write(['x', 'y', 'z'])\n    '              x              y              z'\n  >>> line = FortranRecordWriter('(3F15.3)')\n  >>> line.write([1.0, 0.0, 0.5])\n    ' \
-    \         1.000          0.000          0.500'\n  >>> line.write([1.1, 0.1, 0.6])\n    '          1.100          0.100          0.600'"
-  doc_url: ''
-  dev_url: ''
+  description: "FORTRAN format interpreter for Python\nGenerates text from a Python list of variables or will read a line of text into Python variables according\
+    \  to the FORTRAN format statement passed.\n\nThe library is extensively unit-tested \
+    \ against the Intel FORTRAN compiler on a Linux platform. Differences between platforms/compilers are generally minor."
+  doc_url: 'https://bitbucket.org/brendanarnold/py-fortranformat/wiki/Home'
+  dev_url: 'http://bitbucket.org/brendanarnold/py-fortranformat'
 
 extra:
   recipe-maintainers: 
