--- a/recipes/gptools/meta.yaml
+++ b/recipes/gptools/meta.yaml
@@ -54,21 +54,9 @@ about:
   description: |
     Gaussian processes with arbitrary derivative constraints and predictions.
 
-    `gptools` is a Python package that provides a convenient, powerful and extensible implementation of Gaussian process regression (GPR). Central to `gptool`'s implementation is support for derivatives and their variances. Furthermore, the implementation supports the incorporation of arbitrary linearly transformed quantities into the GP.
+    `gptools` is a Python package that provides a convenient, powerful, and extensible implementation of Gaussian process regression (GPR). Central to `gptool`'s implementation is support for derivatives and their variances. Furthermore, the implementation supports the incorporation of arbitrary linearly transformed quantities into the GP.
 
     Developed and tested using Python 2.7 and scipy 0.14.0. May work with other versions, but it has not been tested under such configurations.
-
-    Full package documentation is located at http://gptools.readthedocs.org/
-
-    A printable PDF is available at https://media.readthedocs.org/pdf/gptools/latest/gptools.pdf
-
-    Releases are available in PyPI at https://pypi.python.org/pypi/gptools/
-
-    To install, simply execute::
-
-        pip install gptools
-
-    (You must already have NumPy and Cython installed for this to work.)
 
     If you find this software useful, please be sure to cite it:
 
