fix license; comment mkl; remove fortran compiler

--- a/recipes/conda-forge-pinning/conda_build_config.yaml
+++ b/recipes/conda-forge-pinning/conda_build_config.yaml
@@ -1,5 +1,6 @@
 blas_impl:
-  - mkl                        # [x86 or x86_64]
+  # mkl-devel packages are available, and conda-forge could enable them if they'd like
+  # - mkl                        # [x86 or x86_64]
   - openblas
 arpack:
   - 3.5
@@ -26,12 +27,6 @@ cxx_compiler:                  # [win]
   - vs2008                     # [win]
   - vs2015                     # [win]
   - vs2015                     # [win]
-fortran_compiler:              # [win]
-  - intel-fortran              # [win]
-fortran_compiler_version:      # [win]
-  - 13.1.6                     # [win]
-  - 16.0.4                     # [win]
-  - 16.0.4                     # [win]
 CONDA_BUILD_SYSROOT:           # [osx]
   - /opt/MacOSX10.9.sdk        # [osx]
 VERBOSE_AT:
