--- a/recipes/conda-forge-pinning/meta.yaml
+++ b/recipes/conda-forge-pinning/meta.yaml
@@ -19,8 +19,8 @@ test:
 
 about:
   summary: The baseline versions of software for the conda-forge ecosystem
-  license: MIT
-  license_family: MIT
+  license: BSD 3-Clause
+  license_family: BSD
   home: https://github.com/conda-forge/staged-recipes/wiki/Pinned-dependencies
 
 extra:
