Add a note about the license file

--- a/recipes/flask_swagger_ui/meta.yaml
+++ b/recipes/flask_swagger_ui/meta.yaml
@@ -29,6 +29,7 @@ test:
   imports:
     - flask_swagger_ui
 
+# See https://github.com/sveint/flask-swagger-ui/issues/17
 about:
   home: https://github.com/sveint/flask-swagger-ui
   license: MIT
