pyttk: Added test import and specified tk version

--- a/recipes/pyttk/meta.yaml
+++ b/recipes/pyttk/meta.yaml
@@ -21,8 +21,14 @@ build:
 requirements:
   build:
     - python
+    - tk 8.5.*
   run:
     - python
+    - tk 8.5.*
+
+test:
+  imports:
+    ttk
 
 about:
   home: http://code.google.com/p/python-ttk
