Remove word "License" from license

--- a/recipes/pidly/meta.yaml
+++ b/recipes/pidly/meta.yaml
@@ -37,7 +37,7 @@ test:
 
 about:
   home: https://github.com/anthonyjsmith/pIDLy
-  license: MIT License
+  license: MIT
   license_family: MIT
   license_file: 'LICENSE'
   summary: IDL within Python
