gptools: Address review comments
- Reduce build dependencies
- Specify numpy dependencies better
- Test import of gptools.kernel
- Add explicit version number of GPL

--- a/recipes/gptools/meta.yaml
+++ b/recipes/gptools/meta.yaml
@@ -21,32 +21,26 @@ requirements:
     - python
     - setuptools
     - cython
-    - numpy
-    - scipy
-    - matplotlib
-    - mpmath
-    - emcee
-    - corner
+    - numpy 1.11.*
     - toolchain
-    # if your project compiles code (such as a C extension) then add `toolchain` as a build requirement.
   run:
     - python
     - cython
-    - numpy
+    - numpy >=1.11
     - scipy
     - matplotlib
     - mpmath
     - emcee
     - corner
-    - toolchain
 
 test:
   imports:
     - gptools
+    - gptools.kernel
 
 about:
   home: http://gptools.readthedocs.org/
-  license: GPL
+  license: GPL-3.0
   license_family: GPL
   license_file: LICENSE
   summary: 'Gaussian process regression with derivative constraints and predictions.'
