py-fann2: Major overhaul of meta.yaml
- Use source as is
- Fill out about: section

--- a/recipes/py-fann2/meta.yaml
+++ b/recipes/py-fann2/meta.yaml
@@ -1,28 +1,30 @@
+{% set name = "fann2" %}
+{% set version = "1.0.7" %}
+{% set file_ext = "tar.gz" %}
+{% set hash_type = "sha256" %}
+{% set hash_value = "53eca74a2c0a0dfcf2d8e449cf487603886dadeda343adab4c0f1b811734fb9f" %}
+
 package:
-  name: py-fann2
-  version: "1.1.0"
+  name: 'py-{{ name|lower }}'
+  version: '{{ version }}'
 
 source:
-  git_rev: 906e285daf77fbdffffeb58b19423dde96729e10
-  git_url:  git@github.com:smithsp/fann2.git
+  fn: '{{ name }}-{{ version }}.{{ file_ext }}'
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ file_ext }}
+  '{{ hash_type }}': '{{ hash_value }}'
 
 build:
-  skip: True  # [win]
   number: 0
-  # noarch_python: True
-  # preserve_egg_dir: True
-  script: 'python setup.py install --single-version-externally-managed --record=record.txt'
+  script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
   build:
     - python
     - setuptools
-    - swig
     - fann2
-
+    - toolchain
   run:
     - python
-    - swig
     - fann2
 
 test:
@@ -31,8 +33,16 @@ test:
 
 about:
   home: https://github.com/FutureLinkCorporation/fann2
-  license: LGPL2
-  summary: 'Fast Artificial Neural Network Library (fann) python bindings.'
+  license: LGPL2.1
+  license_family: LGPL
+  license_file: 'LICENSE'
+  summary: Fast Artificial Neural Network Library (fann) python bindings.
+  description: |
+    Python bindings for Fast Artificial Neural Networks (FANN) library that
+    implements multilayer artificial neural networks with support for both
+    fully-connected and sparsely-connected networks. It includes a framework for
+    easy handling of training data sets. It is easy to use, versatile, well-
+    documented, and fast.
 
 extra:
   recipe-maintainers:
