remove comments, fix bad jinja template

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -1,14 +1,7 @@
-# Note: there are many handy hints in comments in this example -- remove them when you've finalized your recipe
-
-# Jinja variables help maintain the recipe as you'll update the version only here.
 {% set name = "Adept" %}
 {% set version = "git-d0c821e" %}
-{% set build number = "0"}
+{% set build number = "0" %}
 {% set sha256 = "1aa7e841e19067dfc8e07e22a985727278d857a651934feb2132603fc10b4799" %}
-# sha256 is the prefered checksum -- you can get it for a file with:
-#  `openssl sha256 <file name>`.
-# You may need the openssl package, available on conda-forge
-#  `conda install openssl -c conda-forge``
 
 package:
   name: {{ name|lower }}
@@ -37,19 +30,10 @@ test:
 
 about:
   home: http://www.met.reading.ac.uk/clouds/adept/
-  # Remember to specify the license variants for BSD, Apache, GPL, and LGLP.
-  # Prefer the short version, e.g: GPL-2.0 instead of GNU General Public License version 2.0
-  # See https://opensource.org/licenses/alphabetical
   license: Apache-2.0
-  # The license_family, i.e. "BSD" if license is "BSD-3-Clause". (optional)
   license_family: Apache
-  # It is strongly encouraged to include a license file in the package,
-  # (even if the license doesn't require it) using the license_file entry.
-  # See http://conda.pydata.org/docs/building/meta-yaml.html#license-file
   license_file: LICENSE.txt
   summary: 'Simple, fast, extensible JSON encoder/decoder for Python'
-
-  # The remaining entries in this section are optional, but recommended
   description: |
     Adept (Automatic Differentiation using Expression Templates) is a free C++
     software library that enables algorithms to be automatically differentiated,
