--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "Adept" %}
-{% set version = "1.1.d0c821e" %}
+{% set version = "1.1" %}
 {% set build number = "0" %}
 {% set sha256 = "1aa7e841e19067dfc8e07e22a985727278d857a651934feb2132603fc10b4799" %}
 
