change version # back to reflect latest git commit & fix sha

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "Adept" %}
-{% set version = "1.1" %}
+{% set version = "1.1.d0821e" %}
 {% set build_number = "0" %}
-{% set sha256 = "1aa7e841e19067dfc8e07e22a985727278d857a651934feb2132603fc10b4799" %}
+{% set sha256 = "9673ffa9c0de569bc7b867084821f668b2653c22e338321af9681342547da908" %}
 
 package:
   name: {{ name|lower }}
