py-fann2: Use patch method

--- a/recipes/py-fann2/meta.yaml
+++ b/recipes/py-fann2/meta.yaml
@@ -1,8 +1,8 @@
 {% set name = "fann2" %}
-{% set version = "1.0.7" %}
+{% set version = "1.1.2" %}
 {% set file_ext = "tar.gz" %}
 {% set hash_type = "sha256" %}
-{% set hash_value = "53eca74a2c0a0dfcf2d8e449cf487603886dadeda343adab4c0f1b811734fb9f" %}
+{% set hash_value = "0f2ae9e14630d4d652ffb58f9239ca488e5c15c38e9302f204c24d8c2f7cf0d8" %}
 
 package:
   name: 'py-{{ name|lower }}'
@@ -10,9 +10,10 @@ package:
 
 source:
   fn: '{{ name }}-{{ version }}.{{ file_ext }}'
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ file_ext }}
+  url:  https://github.com/FutureLinkCorporation/{{ name }}/archive/{{ version }}.{{ file_ext }}
   '{{ hash_type }}': '{{ hash_value }}'
-
+  patches:
+    - setup.py.patch
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record=record.txt
