apparently it looks at the downloaded tar instead of local?

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -35,7 +35,7 @@ about:
   home: http://www.met.reading.ac.uk/clouds/adept/
   license: Apache-2.0
   license_family: Apache
-  license_file: LICENSE.txt
+  license_file: COPYING
   summary: 'Simple, fast, extensible JSON encoder/decoder for Python'
   description: |
     Adept (Automatic Differentiation using Expression Templates) is a free C++
