--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -27,9 +27,10 @@ requirements:
 
 test:
   commands:
-    - test -f $PREFIX/lib/libadept.so
-    - test -f $PREFIX/lib/libadept.a
-    - test -f $PREFIX/include/adept.h
+    - make check
+    - test -f $PREFIX/lib/libadept.so  # [not win]
+    - test -f $PREFIX/lib/libadept.a  # [not win]
+    - test -f $PREFIX/include/adept.h  # [not win]
 
 about:
   home: http://www.met.reading.ac.uk/clouds/adept/
