--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -28,7 +28,8 @@ requirements:
 test:
   commands:
     - make check
-    - test -f $PREFIX/lib/libadept.so  # [not win]
+    - test -L $PREFIX/lib/libadept.so  # [not win]
+    - test -f $PREFIX/lib/libadept.so.0.0.0  # [not win]
     - test -f $PREFIX/lib/libadept.a  # [not win]
     - test -f $PREFIX/include/adept.h  # [not win]
 
