--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -27,7 +27,8 @@ requirements:
 
 test:
   commands:
-    - ls -la $PREFIX
+    - ls -la $PREFIX/lib
+    - ls -la $PREFIX/include
     - test -L $PREFIX/lib/libadept.so  # [not win]
     - test -f $PREFIX/lib/libadept.so.0.0.0  # [not win]
     - test -f $PREFIX/lib/libadept.a  # [not win]
