Setting specific xdg version.
Latest xdg is python >=3.6 only

--- a/recipes/pythesint/meta.yaml
+++ b/recipes/pythesint/meta.yaml
@@ -14,19 +14,20 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  noarch: python
 
 requirements:
   build:
     - python
     - pyyaml
     - requests
-    - xdg  # [not win]
+    - xdg 1.0.5  # [not win]
     - setuptools
   run:
     - python
     - pyyaml
     - requests
-    - xdg  # [not win]
+    - xdg 1.0.5  # [not win]
 
 test:
   requires:
