py-fann2: Add swig to build dependencies; simplify patch; don't build on windows
Skip building on windows because the fann2 package doesn't build there yet

[skip appveyor]

--- a/recipes/py-fann2/meta.yaml
+++ b/recipes/py-fann2/meta.yaml
@@ -14,9 +14,12 @@ source:
   '{{ hash_type }}': '{{ hash_value }}'
   patches:
     - setup.py.patch
+
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record=record.txt
+  # Skip the win build because fann2 doesn't build there yet
+  skip: True  # [win]
 
 requirements:
   build:
@@ -24,6 +27,7 @@ requirements:
     - setuptools
     - fann2
     - toolchain
+    - swig
   run:
     - python
     - fann2
