Adding extra info

--- a/recipes/root5/meta.yaml
+++ b/recipes/root5/meta.yaml
@@ -1,12 +1,19 @@
+{% set name = "root5" %}
+{% set version = "5.34.36" %}
+{% set sha256 = "fc868e5f4905544c3f392cc9e895ef5571a08e48682e7fe173bd44c0ba0c7dcd" %}
+
 package:
-   name: root5
-   version: "5.34.36"
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  url: https://root.cern.ch/download/root_v5.34.36.source.tar.gz
-  
+  fn: root_v{{version}}.source.tar.gz
+  url: https://root.cern.ch/download/root_v{{version}}.source.tar.gz
+  sha256: {{ sha256 }}
+
 build:
-  number: 0
+   number: 0
+   skip: true  # [win]
 
 requirements:
  
@@ -54,4 +61,13 @@ test:
     - root -b -q ${PREFIX}/share/doc/root/tutorials/physics/PhaseSpace.C
     - cd ${PREFIX}/share/doc/root/tutorials/pyroot && python fillrandom.py && python fit1.py
     - cd ${PREFIX}/share/doc/root/tutorials/fitsio && root -b -q FITS_tutorial1.C
-    - 
+
+about:
+  home: https://root.cern.ch/
+  license: LGPL
+  summary: 'A modular scientific software framework. It provides all the functionalities needed to deal with big data processing, statistical analysis, visualisation and storage. It is mainly written in C++ but integrated with other languages such as Python and R.'
+  license_family: GPL
+
+extra:
+  recipe-maintainers:
+    - giacomov
