Adding spaces for selectors

--- a/recipes/root5/meta.yaml
+++ b/recipes/root5/meta.yaml
@@ -19,7 +19,7 @@ requirements:
  
  build:
      - toolchain
-     - gcc # [linux]
+     - gcc  # [linux]
      - python x.x
      - gsl
      - fftw
@@ -51,8 +51,8 @@ requirements:
 
 test:
   commands:
-    - test -f ${PREFIX}/lib/root/libCore.so [linux]
-    - test -f ${PREFIX}/lib/root/libCore.so [osx]
+    - test -f ${PREFIX}/lib/root/libCore.so  # [linux]
+    - test -f ${PREFIX}/lib/root/libCore.so  # [osx]
     - test -f ${PREFIX}/include/root/TROOT.h
     - conda inspect linkages -p $PREFIX root5  # [not win]
     - conda inspect objects -p $PREFIX root5  # [osx]
