--- a/recipes/pydsd/meta.yaml
+++ b/recipes/pydsd/meta.yaml
@@ -21,8 +21,19 @@ requirements:
   build:
     - python
     - setuptools
+    - pytmatrix >= 0.3.1
+    - scipy
+    - numpy
+    - matplotlib
+    - versioneer
   run:
     - python
+    - pytmatrix >= 0.3.1
+    - scipy
+    - numpy
+    - matplotlib
+    - versioneer
+
 
 test:
   imports:
