Removed pytmatrix package specifier

--- a/recipes/pydsd/meta.yaml
+++ b/recipes/pydsd/meta.yaml
@@ -20,14 +20,14 @@ requirements:
   build:
     - python
     - setuptools
-    - pytmatrix >= 0.3.1
+    - pytmatrix 
     - scipy
     - numpy
     - matplotlib
     - versioneer
   run:
     - python
-    - pytmatrix >= 0.3.1
+    - pytmatrix 
     - scipy
     - numpy
     - matplotlib
