--- a/recipes/pydsd/meta.yaml
+++ b/recipes/pydsd/meta.yaml
@@ -1,4 +1,4 @@
-{% set name = "pydsd" %}
+{% set name = "PyDSD" %}
 {% set version = "1.0.3.2" %}
 {% set sha256 = "f0b815e6a1356e56a92e505cf67530cfef69588cceeebf9489f5ad5a5fc036c5" %}
 
