Removed explicit license file

--- a/recipes/pydsd/meta.yaml
+++ b/recipes/pydsd/meta.yaml
@@ -39,7 +39,7 @@ about:
   home: http://github.com/josephhardinee/PyDSD
   license: GPL-2.0
   license_family: GPL
-  license_file: LICENSE.txt
+  #license_file: LICENSE.txt
   summary: 'Library for working with Disdrometer data, particle probes, and drop size distributions.'
 
   description: |
