--- a/recipes/root5/meta.yaml
+++ b/recipes/root5/meta.yaml
@@ -54,13 +54,13 @@ test:
     - test -f ${PREFIX}/lib/root/libCore.so  # [linux]
     - test -f ${PREFIX}/lib/root/libCore.so  # [osx]
     - test -f ${PREFIX}/include/root/TROOT.h
-    - conda inspect linkages -p $PREFIX root5  # [not win]
-    - conda inspect objects -p $PREFIX root5  # [osx]
-    - root -b -q ${PREFIX}/share/doc/root/tutorials/roofit/rf101_basics.C
-    - root -b -q ${PREFIX}/share/doc/root/tutorials/fft/FFT.C
-    - root -b -q ${PREFIX}/share/doc/root/tutorials/physics/PhaseSpace.C
-    - cd ${PREFIX}/share/doc/root/tutorials/pyroot && python fillrandom.py && python fit1.py
-    - cd ${PREFIX}/share/doc/root/tutorials/fitsio && root -b -q FITS_tutorial1.C
+    #- conda inspect linkages -p $PREFIX root5  # [not win]
+    #- conda inspect objects -p $PREFIX root5  # [osx]
+    - root -b -q ${PREFIX}/share/doc/root/tutorials/roofit/rf101_basics.C >& /dev/null
+    - root -b -q ${PREFIX}/share/doc/root/tutorials/fft/FFT.C >& /dev/null
+    - root -b -q ${PREFIX}/share/doc/root/tutorials/physics/PhaseSpace.C >& /dev/null
+    - cd ${PREFIX}/share/doc/root/tutorials/pyroot && python fillrandom.py && python fit1.py >& /dev/null
+    - cd ${PREFIX}/share/doc/root/tutorials/fitsio && root -b -q FITS_tutorial1.C >& /dev/null
 
 about:
   home: https://root.cern.ch/
