gptools: Restrict to python 2

--- a/recipes/gptools/meta.yaml
+++ b/recipes/gptools/meta.yaml
@@ -18,13 +18,13 @@ build:
 
 requirements:
   build:
-    - python
+    - python 2.*
     - setuptools
     - cython
     - numpy 1.11.*
     - toolchain
   run:
-    - python
+    - python 2.*
     - cython
     - numpy >=1.11
     - scipy
