mdsplus: fixed linting for spaces of selectors and maintainers

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -29,7 +29,7 @@ requirements:
     - python 2.*
     - xorg-libx11  # [osx]
     - xorg-libxt  # [osx]
-    - openmotif # [osx]
+    - openmotif  # [osx]
     - openmotif-dev  # [osx]
     - python
     - toolchain
@@ -43,7 +43,7 @@ requirements:
     - libiconv
     - xorg-libx11  # [osx]
     - xorg-libxt  # [osx]
-    - openmotif # [osx]
+    - openmotif  # [osx]
     - openmotif-dev  # [osx]
     - python
     - numpy
@@ -75,3 +75,7 @@ about:
     MDSplus includes x-windows and java tools for viewing data
     or for modifying or viewing the underlying structures.
   dev_url: https://github.com/MDSplus/mdsplus
+
+extra:
+  recipe-maintainers:
+    - smithsp
