mdsplus: Give perl as explicit dependency and remove osx specificity of dependencies

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -27,12 +27,13 @@ requirements:
     - pyodbc
     - gcc
     - python 2.*
-    - xorg-libx11  # [osx]
-    - xorg-libxt  # [osx]
-    - openmotif  # [osx]
-    - openmotif-dev  # [osx]
+    - xorg-libx11
+    - xorg-libxt
+    - openmotif
+    - openmotif-dev
     - python
     - toolchain
+    - perl
   run:
     - libxml2
     - freetds
@@ -41,10 +42,10 @@ requirements:
     - unixodbc
     - pyodbc
     - libiconv
-    - xorg-libx11  # [osx]
-    - xorg-libxt  # [osx]
-    - openmotif  # [osx]
-    - openmotif-dev  # [osx]
+    - xorg-libx11
+    - xorg-libxt
+    - openmotif
+    - openmotif-dev
     - python
     - numpy
 
