Changes from comments on PR: Added license, removed some build and run requirements

--- a/recipes/pydsd/meta.yaml
+++ b/recipes/pydsd/meta.yaml
@@ -20,7 +20,6 @@ requirements:
   build:
     - python
     - setuptools
-    - pytmatrix 
     - versioneer
   run:
     - python
@@ -28,7 +27,6 @@ requirements:
     - scipy
     - numpy
     - matplotlib
-    - versioneer
     - netcdf4
 
 
@@ -40,7 +38,8 @@ about:
   home: http://github.com/josephhardinee/PyDSD
   license: GPL-2.0
   license_family: GPL
-  #license_file: LICENSE.txt
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  # https://github.com/josephhardinee/PyDSD/pull/59 adds license to source for next release.
   summary: 'Library for working with Disdrometer data, particle probes, and drop size distributions.'
 
   description: |
