--- a/recipes/pydsd/meta.yaml
+++ b/recipes/pydsd/meta.yaml
@@ -38,7 +38,7 @@ about:
   home: http://github.com/josephhardinee/PyDSD
   license: GPL-2.0
   license_family: GPL
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   # https://github.com/josephhardinee/PyDSD/pull/59 adds license to source for next release.
   summary: 'Library for working with Disdrometer data, particle probes, and drop size distributions.'
 
