Fixed elements in yaml file and added argument to build shell script.

--- a/recipes/openquake/meta.yaml
+++ b/recipes/openquake/meta.yaml
@@ -10,7 +10,7 @@ source:
    # List any patch files here
    # - fix.patch
 
-# build:
+build:
   # noarch: python
   # preserve_egg_dir: True
   # entry_points:
@@ -24,7 +24,7 @@ source:
 
   # If this is a new build for the same version, increment the build
   # number. If you do not include this key, it defaults to 0.
-  # number: 1
+  number: 1
 
 requirements:
   build:
@@ -307,10 +307,14 @@ test:
 
 about:
   home: https://github.com/gem/oq-engine
-  license: GNU Affero General Public License v3
+  license: GNU Affero GPL v3
   summary: 'Computes earthquake hazard and risk.'
   license_family: AGPL
 
+extra:
+  recipe-maintainers:
+    mhearne-usgs
+  
 # See
 # http://docs.continuum.io/conda/build.html for
 # more information about meta.yaml
