fixed maintainers issue

--- a/recipes/openquake/meta.yaml
+++ b/recipes/openquake/meta.yaml
@@ -313,7 +313,7 @@ about:
 
 extra:
   recipe-maintainers:
-    mhearne-usgs
+    - mhearne-usgs
   
 # See
 # http://docs.continuum.io/conda/build.html for
