--- a/recipes/openquake/meta.yaml
+++ b/recipes/openquake/meta.yaml
@@ -1,35 +1,23 @@
+{% set version = "2.8.0" %}
+
 package:
   name: openquake.engine
-  version: "2.8.0"
+  version: {{ version }}
 
 source:
-  fn: openquake.engine-2.8.0.tar.gz
-  url: https://pypi.python.org/packages/c4/de/713830f60939db7832cfa9385b3c36ac0a568d8237c7f626d9c11a387642/openquake.engine-2.8.0.tar.gz
-  md5: 6a1555b7a4e84451b59fb93cf7fddf33
-#  patches:
-   # List any patch files here
-   # - fix.patch
+  url: https://pypi.io/packages/source/o/openquake.engine/openquake.engine-{{ version }}.tar.gz
+  sha256: 55aed57bb65395e733106e5a1b2cb3fde9d8966f40f3b02167ccc9446d356473
 
 build:
-  # noarch: python
-  # preserve_egg_dir: True
-  # entry_points:
-    # Put any entry points (scripts to be generated automatically) here. The
-    # syntax is module:function.  For example
-    #
-    # - openquake.engine = openquake.engine:main
-    #
-    # Would create an entry point called openquake.engine that calls openquake.engine.main()
-
-
-  # If this is a new build for the same version, increment the build
-  # number. If you do not include this key, it defaults to 0.
-  number: 1
+  number: 0
+  skip: True  # [not py35]
+  script: python -m pip install --no-deps --ignore-installed .
+  noarch: python
 
 requirements:
   build:
     - python >3.5.0,<3.5.9
-    - setuptools
+    - pip
     - mock >=1.0,<1.4
     - h5py >=2.2,<2.8
     - nose >=1.3,<1.4
@@ -45,7 +33,6 @@ requirements:
     - requests >=2.2,<2.13
     - pyshp >=1.2.3,<1.2.11
     - pyyaml
-
   run:
     - python
     - mock >=1.0,<1.4
@@ -65,7 +52,6 @@ requirements:
     - pyyaml
 
 test:
-  # Python imports
   imports:
     - openquake
     - openquake.baselib
@@ -293,18 +279,6 @@ test:
     - openquake.server.tests.db.upgrades
     - openquake.server.v1
 
-  # commands:
-    # You can put test commands to be run here.  Use this to test that the
-    # entry points work.
-
-
-  # You can also put a file called run_test.py in the recipe that will be run
-  # at test time.
-
-  # requires:
-    # Put any additional test requirements here.  For example
-    # - nose
-
 about:
   home: https://github.com/gem/oq-engine
   license: GNU Affero GPL v3
@@ -314,7 +288,3 @@ about:
 extra:
   recipe-maintainers:
     - mhearne-usgs
-  
-# See
-# http://docs.continuum.io/conda/build.html for
-# more information about meta.yaml
