--- a/recipes/openquake/meta.yaml
+++ b/recipes/openquake/meta.yaml
@@ -10,34 +10,16 @@ source:
 
 build:
   number: 0
-  skip: True  # [not py35]
+  skip: True  # [py2k]
   script: python -m pip install --no-deps --ignore-installed .
-  noarch: python
 
 requirements:
   build:
-    - python >3.5.0,<3.5.9
+    - python
     - pip
-    - mock >=1.0,<1.4
-    - h5py >=2.2,<2.8
-    - nose >=1.3,<1.4
-    - numpy >=1.8,<1.12
-    - scipy >=0.13,<0.18
-    - pyzmq <17.0
-    - psutil >=1.2,<4.5
-    - shapely >=1.3,<1.6
-    - docutils >=0.11,<0.14
-    - decorator >=3.4,<4.2
-    - django >=1.6,<1.12
-    - matplotlib >=1.5,<2.0
-    - requests >=2.2,<2.13
-    - pyshp >=1.2.3,<1.2.11
-    - pyyaml
   run:
     - python
-    - mock >=1.0,<1.4
     - h5py >=2.2,<2.8
-    - nose >=1.3,<1.4
     - numpy >=1.8,<1.12
     - scipy >=0.13,<0.18
     - pyzmq <17.0
