--- a/recipes/lighttpd/meta.yaml
+++ b/recipes/lighttpd/meta.yaml
@@ -48,7 +48,7 @@ test:
 
 about:
   home: http://www.lighttpd.net/
-  license: BSD
+  license: BSD 3-Clause
   license_file: COPYING
   summary: Light, fast web server
   description: |
