add perl, which is needed to run make check tests
is this the right way or could it be better to add it to yum_requirements?

--- a/recipes/lighttpd/meta.yaml
+++ b/recipes/lighttpd/meta.yaml
@@ -33,6 +33,7 @@ requirements:
     - zlib 1.2.11
     - bzip2 1.0.*
     - pcre 8.39*
+    - perl  # for make check
   run:
     - zlib 1.2.11
     - bzip2 1.0.*
