complete with optional dependencies in CF

--- a/recipes/lighttpd/meta.yaml
+++ b/recipes/lighttpd/meta.yaml
@@ -33,11 +33,19 @@ requirements:
     - zlib 1.2.11
     - bzip2 1.0.*
     - pcre 8.39*
+    - openssl 1.0.*
+    - libxml2 2.9.*
+    - sqlite 3.13.*
+    - libuuid
     - perl  # for make check
   run:
     - zlib 1.2.11
     - bzip2 1.0.*
     - pcre 8.39*
+    - openssl 1.0.*
+    - libxml2 2.9.*
+    - sqlite 3.13.*
+    - libuuid
 
 test:
   files:
