more explicit and complete feature set

--- a/recipes/lighttpd/meta.yaml
+++ b/recipes/lighttpd/meta.yaml
@@ -30,18 +30,21 @@ requirements:
   build:
     - toolchain
     - pkg-config
+    - libtool
     - zlib 1.2.11
     - bzip2 1.0.*
     - pcre 8.39*
+    - krb5 1.14.*
     - openssl 1.0.*
     - libxml2 2.9.*
     - sqlite 3.13.*
     - libuuid
-    - perl  # for make check
+    - mysql
   run:
     - zlib 1.2.11
     - bzip2 1.0.*
     - pcre 8.39*
+    - krb5 1.14.*
     - openssl 1.0.*
     - libxml2 2.9.*
     - sqlite 3.13.*
