--- a/recipes/lighttpd/meta.yaml
+++ b/recipes/lighttpd/meta.yaml
@@ -40,6 +40,7 @@ requirements:
     - sqlite 3.13.*
     - libuuid
     - mysql
+    - perl  # Needed to run the tests
   run:
     - zlib 1.2.11
     - bzip2 1.0.*
