skip all but py35 until deps are sorted out

--- a/recipes/openquake/meta.yaml
+++ b/recipes/openquake/meta.yaml
@@ -10,7 +10,7 @@ source:
 
 build:
   number: 0
-  skip: True  # [py2k]
+  skip: True  # [not py35]
   script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
