--- a/pysnmp/meta.yaml
+++ b/pysnmp/meta.yaml
@@ -71,7 +71,7 @@ test:
 
 about:
   home: http://snmplabs.com/pysnmp
-  license: BSD
+  license: BSD-2-Clause
   license_url: http://pysnmp.sourceforge.net/license.html
   license_family: BSD
   license_file: LICENSE.txt
