nodebook recipe revisions

--- a/recipes/nodebook/meta.yaml
+++ b/recipes/nodebook/meta.yaml
@@ -14,6 +14,7 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  noarch: python
 
 requirements:
   build:
@@ -27,11 +28,11 @@ requirements:
     - dill
     - msgpack-python
     - pandas
-    - pytest-runner
 
 test:
   imports:
     - nodebook
+    - nodebook.ipython
 
 about:
   home: https://github.com/stitchfix/nodebook
