--- a/recipes/antlr-python-runtime/meta.yaml
+++ b/recipes/antlr-python-runtime/meta.yaml
@@ -1,10 +1,10 @@
 {% set name = "antlr4-python2-runtime" %}  # [py2k]
-{% set sha256 = "dc6bc369dd19f9c2e8926f594c4beadde19b3a3067a352ce959a443c0d7c5b2c" %}  # [py2k]
+{% set sha256 = "3bc09f7fe058fe8ede92e5d292f7a6932022cde28bb0ba5f44f96842c3c894d8" %}  # [py2k]
 
 {% set name = "antlr4-python3-runtime" %}  # [py3k]
-{% set sha256 = "df12103a041553807e510f315542d36f48e43bdb9c444c5195ae4247cde799c7" %}  # [py3k]
+{% set sha256 = "1b26b72c4492cef310542da10bf6b2ab4aa1775618fc6003f75b55ae9eaa3fd3" %}  # [py3k]
 
-{% set version = "4.7" %}
+{% set version = "4.7.1" %}
 
 
 package:
@@ -40,6 +40,8 @@ about:
   license: BSD-3-Clause
   license_family: BSD
   summary: This is the Python runtime for ANTLR.
+  dev_url: https://github.com/antlr/antlr4
+  doc_url: https://github.com/antlr/antlr4/blob/master/doc/python-target.md
 
 extra:
   recipe-maintainers:
