Pin to `llvmdev` 5.0.0

--- a/recipes/llvmlite/meta.yaml
+++ b/recipes/llvmlite/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - setuptools
     - enum34  # [py2k]
     - llvmdev 
+    - llvmdev 5.0.0
   run:
     - python
     - enum34  # [py2k]
