--- a/recipes/lightfm/meta.yaml
+++ b/recipes/lightfm/meta.yaml
@@ -1,5 +1,5 @@
-{% set name = "lighfm" %}
-{% set version = "1.4" %}
+{% set name = "lightfm" %}
+{% set version = "1.14" %}
 {% set sha256 = "4646742192f114cc07964cf463a370af6786f4027e46d32fff45fbf7fbce3d7f" %}
 
 package:
