fix test for OSX

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -27,9 +27,12 @@ requirements:
 
 test:
   commands:
-    - test -L $PREFIX/lib/libadept.so  # [not win]
-    - test -f $PREFIX/lib/libadept.so.0.0.0  # [not win]
-    - test -f $PREFIX/lib/libadept.a  # [not win]
+    - test -L $PREFIX/lib/libadept.so  # [unix]
+    - test -L $PREFIX/lib/libadept.dylib  # [osx]
+    - test -f $PREFIX/lib/libadept.so.0.0.0  # [unix]
+    - test -f $PREFIX/lib/libadept.a  # [unix]
+    - test -f $PREFIX/lib/libadept.la  # [osx]
+    - test -f $PREFIX/lib/libadept.0.dylib  # [oxs]
     - test -f $PREFIX/include/adept.h  # [not win]
 
 about:
