add empty test for linter
it’s a metapackage, there isn’t anything to test

--- a/recipes/mpi/meta.yaml
+++ b/recipes/mpi/meta.yaml
@@ -24,6 +24,8 @@ requirements: {}
   # None, mpi providers should depend on me
 
 test:
+  commands:
+    - echo "I'm a metapackage"
 
 about:
   home: https://github.com/conda-forge/mpi-feedstock
