update commit to latest, and fix url to pull form this commit (no new release seems fothcoming)

--- a/recipes/adept/meta.yaml
+++ b/recipes/adept/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "Adept" %}
-{% set version = "1.1.d0821e" %}
+{% set version = "1.1.8c24824" %}
 {% set build_number = "0" %}
-{% set sha256 = "9673ffa9c0de569bc7b867084821f668b2653c22e338321af9681342547da908" %}
+{% set sha256 = "827fc6f25fac1312b5e7431febb836814dc28945494128e46d0fb88b0d893a86" %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +9,7 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/rjhogan/Adept/archive/master.tar.gz
+  url: https://github.com/rjhogan/Adept/archive/8c248244492fbc44f36450276d8c6bb6403556db.tar.gz
   sha256: {{ sha256 }}
 
 build:
