gptools: Cleaned up description; removed python 2 specificity and cython run requirement

--- a/recipes/gptools/meta.yaml
+++ b/recipes/gptools/meta.yaml
@@ -18,14 +18,13 @@ build:
 
 requirements:
   build:
-    - python 2.*
+    - python
     - setuptools
     - cython
     - numpy 1.11.*
     - toolchain
   run:
-    - python 2.*
-    - cython
+    - python
     - numpy >=1.11
     - scipy
     - matplotlib
@@ -48,9 +47,14 @@ about:
   description: |
     Gaussian processes with arbitrary derivative constraints and predictions.
 
-    `gptools` is a Python package that provides a convenient, powerful, and extensible implementation of Gaussian process regression (GPR). Central to `gptool`'s implementation is support for derivatives and their variances. Furthermore, the implementation supports the incorporation of arbitrary linearly transformed quantities into the GP.
+    `gptools` is a Python package that provides a convenient, powerful, and extensible
+    implementation of Gaussian process regression (GPR). Central to `gptool`'s
+    implementation is support for derivatives and their variances. Furthermore, the
+    implementation supports the incorporation of arbitrary linearly transformed
+    quantities into the GP.
 
-    Developed and tested using Python 2.7 and scipy 0.14.0. May work with other versions, but it has not been tested under such configurations.
+    Developed and tested using Python 2.7 and scipy 0.14.0. May work with other
+    versions, but it has not been tested under such configurations.
 
     If you find this software useful, please be sure to cite it:
 
