mdsplus: Make configure patch platform specific

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -11,7 +11,7 @@ source:
   url: https://github.com/MDSplus/{{ name }}/archive/{{ version }}.tar.gz
   sha256: {{ sha256 }}
   patches:
-    - configure.patch
+    - configure.patch.osx  # [osx]
     - mdsdcl_show_version.c.patch
     - Makefile.in.patch
 build:
