The license file is in the SRC_DIR

--- a/recipes/root5/meta.yaml
+++ b/recipes/root5/meta.yaml
@@ -68,7 +68,7 @@ about:
   license: LGPL
   summary: 'A modular scientific software framework. It provides all the functionalities needed to deal with big data processing, statistical analysis, visualisation and storage. It is mainly written in C++ but integrated with other languages such as Python and R.'
   license_family: GPL
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
+  license_file: '{{ environ["SRC_DIR"] }}/LICENSE'
 
 extra:
   recipe-maintainers:
