mdsplus: Add separate patch for linux to avoid mkdir -p problem; [skip appveyor]

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -12,10 +12,12 @@ source:
   sha256: {{ sha256 }}
   patches:
     - configure.patch.osx  # [osx]
+    - configure.patch.linux  # [linux]
     - mdsdcl_show_version.c.patch
     - Makefile.in.patch
 build:
   number: 0
+  skip: True  # [win]
 
 requirements:
   build:
