Added the --no-deps option

--- a/recipes/numdifftools/meta.yaml
+++ b/recipes/numdifftools/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  script: pip install {{ name }}-{{ version }}-py2.py3-none-any.whl
+  script: pip install {{ name }}-{{ version }}-py2.py3-none-any.whl --no-deps
   noarch: python
   
 requirements:
