setuptools is needed also at runtime

--- a/recipes/numdifftools/meta.yaml
+++ b/recipes/numdifftools/meta.yaml
@@ -13,6 +13,8 @@ source:
 
 build:
   number: 0
+  # I build from the wheel so that we don't need pyscaffold. The version
+  # needed by the source distribution of numdifftools is not compatible with conda-forge
   script: pip install {{ name }}-{{ version }}-py2.py3-none-any.whl --no-deps
   noarch: python
   
@@ -29,6 +31,8 @@ requirements:
     
   run:
     - python
+    # This is needed because __init__ use pkg_resources
+    - setuptools
     - numpy >=1.9
     - scipy >=0.8
     - algopy >=0.4
