Attempt at finding xml libraries [fail]

--- a/recipes/mdsplus/meta.yaml
+++ b/recipes/mdsplus/meta.yaml
@@ -15,6 +15,7 @@ source:
     - configure.patch.linux  # [linux]
     - mdsdcl_show_version.c.patch
     - Makefile.in.patch
+    - mdsdcl_Makefile.in.patch
 build:
   number: 0
   skip: True  # [win]
