--- a/recipes/pyttk/meta.yaml
+++ b/recipes/pyttk/meta.yaml
@@ -37,11 +37,14 @@ about:
   license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   summary: Ttk Python wrapper
   description: |
-    This ttk wrapper provides classes to allow using the Tk themed widget set, as well some extensions, under Python.
-
-    Ttk is based on a revised and enhanced version of TIP #48 (http://tip.tcl.tk/48) specified style engine.
-
-    Its basic idea is to separate, to the extent possible, the code implementing a widget's behavior from the code implementing its appearance. Widget class bindings are primarily responsible for maintaining the widget state and invoking callbacks, all aspects of the widgets appearance lies at Themes.
+    This ttk wrapper provides classes to allow using the Tk themed widget
+    set, as well some extensions, under Python.  Ttk is based on a revised
+    and enhanced version of TIP #48 (http://tip.tcl.tk/48) specified style
+    engine.  Its basic idea is to separate, to the extent possible, the code
+    implementing a widget's behavior from the code implementing its
+    appearance. Widget class bindings are primarily responsible for
+    maintaining the widget state and invoking callbacks, all aspects of the
+    widgets appearance lies at Themes.
 
 extra:
   recipe-maintainers:
