v is for version

--- a/recipes/databroker/meta.yaml
+++ b/recipes/databroker/meta.yaml
@@ -7,7 +7,7 @@ package:
   version: {{ version }}
 
 source:
-  fn: {{ name }}-v{{ version }}.tar.gz
+  fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/NSLS-II/{{ name }}/archive/v{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
