--- a/recipes/munkres/meta.yaml
+++ b/recipes/munkres/meta.yaml
@@ -22,13 +22,15 @@ requirements:
     - setuptools
   run:
     - python
-    - pdoc
 
 test:
-  requirements:
+  source_files:
+    - test/*
+  requires:
     - nose
-  script:
-    - nosetest
+  commands:
+    - nosetests
+
 about:
   home: https://github.com/bmc/munkres
   license: Apache v2
