fix license and import test

--- a/recipes/munkres/meta.yaml
+++ b/recipes/munkres/meta.yaml
@@ -30,10 +30,12 @@ test:
     - nose
   commands:
     - nosetests
+  import:
+    - munkres
 
 about:
   home: https://github.com/bmc/munkres
-  license: Apache v2
+  license: Apache-2.0
   license_family: Apache
   license_file: LICENSE.md
   summary: 'The Munkres module provides an O(n^3) implementation of the
