Some small fixes

--- a/recipes/speclite/meta.yaml
+++ b/recipes/speclite/meta.yaml
@@ -19,16 +19,18 @@ requirements:
     - python
     - setuptools
     - pip
-    - numpy
-    - matplotlib
     - wget
+    - numpy
+    - scipy
+    - astropy
+    - matplotlib
 
   run:
     - python
     - numpy
-    - matplotlib
-    - astropy
     - scipy
+    - astropy
+    - matplotlib
 
 test:
 
@@ -36,6 +38,8 @@ test:
     - speclite
     
   commands:
+    # Execute the full test suite
+    
     - cd ${PREFIX}/lib/python*/site-packages/speclite/tests ; py.test -vv
   
   requires:
