Fixing the meta according to the linter

--- a/recipes/speclite/meta.yaml
+++ b/recipes/speclite/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "speclite" %}
 {% set version = "0.7" %}
+{% set sha256 = "2753137e2f3dc0b94d6c3f98c24d674c1a7145410d731cbeb13e0e7f1f7f5ba2" %}
 
 package:
   version: '{{ version }}'
@@ -8,7 +9,8 @@ package:
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   fn: '{{ name }}-{{ version }}.tar.gz'
-
+  sha256: {{sha256}}
+  
 build:
   number: 0
   noarch: python
@@ -47,7 +49,8 @@ test:
     - pyyaml
 
 about:
-  license: BSD License
+  home: http://speclite.readthedocs.io/en/latest/overview.html
+  license: BSD
   license_family: BSD
   summary: 'This package provides a set of lightweight utilities for working with spectroscopic data in astronomy. Based on the astropy affiliated package template.'
   license_file: '{{ environ["SRC_DIR"] }}/licenses/LICENSE.rst'
