Implementing comments from @synapticarbors (thanks!)

--- a/recipes/speclite/meta.yaml
+++ b/recipes/speclite/meta.yaml
@@ -13,22 +13,21 @@ source:
   
 build:
   number: 0
-  noarch: python
+  skip: true  # [win]
 
 requirements:
 
   build:
-    - python
+    - python x.x
     - setuptools
     - pip
     - wget
     - numpy
     - scipy
     - astropy
-    - matplotlib
 
   run:
-    - python
+    - python x.x
     - numpy
     - scipy
     - astropy
@@ -50,7 +49,7 @@ test:
 
 about:
   home: http://speclite.readthedocs.io/en/latest/overview.html
-  license: BSD
+  license: BSD-3-Clause
   license_family: BSD
   summary: 'This package provides a set of lightweight utilities for working with spectroscopic data in astronomy. Based on the astropy affiliated package template.'
   license_file: '{{ environ["SRC_DIR"] }}/licenses/LICENSE.rst'
