--- a/recipes/speclite/meta.yaml
+++ b/recipes/speclite/meta.yaml
@@ -14,16 +14,13 @@ source:
 build:
   number: 0
   skip: true  # [win]
+  script: python setup.py install --offline --no-git --single-version-externally-managed --record record.txt
 
 requirements:
 
   build:
     - python x.x
     - setuptools
-    - pip
-    - wget
-    - numpy
-    - scipy
     - astropy
 
   run:
@@ -31,7 +28,7 @@ requirements:
     - numpy
     - scipy
     - astropy
-    - matplotlib
+    - pyyaml
 
 test:
 
@@ -46,6 +43,7 @@ test:
   requires:
     - pytest
     - pyyaml
+    - matplotlib
 
 about:
   home: http://speclite.readthedocs.io/en/latest/overview.html
