Add "extra" section

--- a/recipes/r-rsvd/meta.yaml
+++ b/recipes/r-rsvd/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   number: 0
-  skip: True # [win]
+  skip: True  # [win]
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
@@ -30,10 +30,14 @@ requirements:
 
 test:
   commands:
-    - $R -e "library('rsvd')"           # [not win]
+    - $R -e "library('rsvd')"  # [not win]
 
 about:
   home: https://github.com/erichson/rSVD
   license: GPL (>= 2)
   summary: Low-rank matrix decompositions are fundamental tools and widely used for data analysis, dimension reduction, and data compression.
   license_family: GPL3
+
+extra:
+  recipe-maintainers:
+    - npavlovikj
