--- a/recipes/omas/meta.yaml
+++ b/recipes/omas/meta.yaml
@@ -17,7 +17,8 @@ source:
 
 build:
   number: 0
-  script: "pip install ."
+  script: "python setup.py install --single-version-externally-managed --record record.txt"
+  noarch: python
 
 requirements:
   build:
