implemented corrections, added license

--- a/recipes/scikit-video/meta.yaml
+++ b/recipes/scikit-video/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "sk-video" %}
-{% set version = "1.1.9" %}
-{% set sha256 = "812779b5245e9eaa330ba04fa2bc050b11f1d17246050da4365386d993108c49" %}
+{% set version = "1.1.10" %}
+{% set sha256 = "fb7125cfa2b31253dcf181d0bf285edd6bb25ffebf61dbd8ba11fadb783609a1" %}
 
 package:
   name: {{ name|lower }}
@@ -19,9 +19,8 @@ build:
 requirements:
   build:
     - python
-    - pip
+    - setuptools
     - numpy
-    - scipy
   run:
     - python
     - numpy
@@ -41,9 +40,9 @@ about:
   home: https://github.com/scikit-video/scikit-video
   license: BSD-3-Clause
   license_family: BSD
+  license_file: LICENSE.txt
   summary: 'Video Processing in Python'
 
-  # The remaining entries in this section are optional, but recommended
   description: |
     scikit-video is a Python module for video processing
     built on top of scipy, numpy, and ffmpeg/libav
@@ -52,6 +51,4 @@ about:
 
 extra:
   recipe-maintainers:
-    # GitHub IDs for maintainers of the recipe.
-    # Always check with the people listed below if they are OK becoming maintainers of the recipe. (There will be spam!)
     - carlodri
