Address CI failures

--- a/recipes/lightfm/meta.yaml
+++ b/recipes/lightfm/meta.yaml
@@ -23,17 +23,22 @@ requirements:
     - cython
     - openmp  # [linux]
     # Pin numpy at build time with the minimum version available.
-    - numpy 1.9.*
-    - scipy >=0.17.0
+    - numpy 1.10.*  # [not win or py3k]
+    # required by scipy >=0.17 on windows
+    - numpy 1.11.*  # [win and py2k]
+    - scipy >=0.17
     - requests
   run:
     - python
-    - numpy >=1.9
-    - scipy >=0.17.0
+    - numpy >=1.10  # [not win or py3k]
+    - numpy >=1.11  # [win and py2k]
+    - scipy >=0.17
     - requests
 
 test:
   imports:
+    # ensure OpenMP backend is used on linux
+    - lightfm._lightfm_fast_openmp  # [linux]
     - lightfm
     - lightfm.lightfm
 
