Additional debuging of the failed import

--- a/recipes/lightfm/meta.yaml
+++ b/recipes/lightfm/meta.yaml
@@ -30,6 +30,7 @@ requirements:
     - requests
   run:
     - python
+    - openmp  # [linux]
     - numpy >=1.10  # [not win or py3k]
     - numpy >=1.11  # [win and py2k]
     - scipy >=0.17
